--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,5 @@ dependencies {
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
-    implementation 'com.google.android.gms:play-services:7.8+'
+    implementation project(':qreader')
 }
