--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.infoandroid.gistcomment">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.CAMERA"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,25 +11,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UserActivity"
+        <activity android:name=".view.UserActivity"
             android:screenOrientation="portrait"
             />
-        <activity android:name=".LoginActivity"
+        <activity android:name=".view.LoginActivity"
             android:screenOrientation="portrait"
             />
-        <activity android:name=".CommentActivity"
+        <activity android:name=".view.CommentActivity"
             android:screenOrientation="portrait"
             />
         <activity android:name=".auth.OauthActivity"
             android:screenOrientation="portrait"
             />
-        <activity android:name=".HomeActivity"
+        <activity android:name=".view.HomeActivity"
             android:screenOrientation="portrait"
             />
 
